# wellarchitect-test

./: .gitignore  README.md  __init__.py  api_client.py  app.py  config_loader.py  database.py  django_app.py  image_processor.py  pyproject.toml  requirements-lock.txt  requirements-vulnerable.txt  requirements.txt  setup.py  utils.py
wellarchitect_test.egg-info/: PKG-INFO  requires.txt
