[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wellarchitect-test"
version = "1.0.0"
description = "Vulnerable Python application for security testing"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests==2.25.0",
    "flask==1.1.1",
    "urllib3==1.25.8",
    "pyyaml==5.3.1",
    "jinja2==2.11.2",
    "cryptography==2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

